--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "@sailshq/lodash": "^3.10.3",
     "bcrypt": "^3.0.7",
+    "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
     "sails": "^1.2.3",
     "sails-hook-orm": "^2.1.1",
     "sails-hook-sockets": "^2.0.0",
